# pico-clion-template

./: CMakeLists.txt  README.md  create-blackmagic-udev-rules.sh  dot-gdbinit  gdb-upload.sh  main.c
